@@ -26,7 +26,7 @@ protected:
   virtual void construct_children ();
   virtual Moment pending_moment () const;
   virtual void process (Moment);
-  virtual SCM get_music (Moment)const;
+  virtual SCM get_pending_events (Moment)const;
   virtual Music_iterator *try_music_in_children (Music *) const;
   virtual bool ok () const;
 
